# madam

./: .coveragerc  .gitattributes  .gitignore  .readthedocs.yaml  .travis.yml  MANIFEST.in  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflow/: madam.yml
.github/workflows/: ci.yml  deploy.yml  madam.yml
adam/: __init__.py  adam.py  audio.py  core.py  image.py
doc/: advanced.rst  conf.py  configuration.rst  explanation.rst  howto.rst  index.rst  intro.rst  madam.audio.rst  madam.core.rst  madam.exif.rst  madam.exiv2.rst  madam.ffmpeg.rst  madam.image.rst  madam.iptc.rst  madam.mime.rst  madam.pdf.rst  madam.raw.rst  madam.rst  madam.vector.rst  madam.video.rst  madam.xmp.rst  modules.rst  overview.rst  quickstart.rst  tutorial.rst  upgrade.rst
madam/: __init__.py  _version.py  audio.py  core.py  exif.py  exiv2.py  ffmpeg.py  future.py  image.py  iptc.py  mime.py  pdf.py  raw.py  streaming.py  subtitle.py  vector.py  video.py  xmp.py
tests/: assets.py  bus_qcif_15fps.y4m  conftest.py  test_adam.py  test_audio.py  test_core.py  test_exif.py  test_exiv2.py  test_ffmpeg.py  test_ffmpeg_codecs.py  test_ffmpeg_combine.py  test_ffmpeg_deferred.py  test_ffmpeg_errors.py  test_ffmpeg_probe.py  test_ffmpeg_progress.py  test_ffmpeg_threads.py  test_ffmpeg_version.py  test_filesystem_storage.py  test_image.py  test_image_combine.py  test_integration.py  test_iptc.py  test_lazy_asset.py  test_madam.py  test_mime.py  test_pdf.py  test_pillow_config.py  test_raw.py  test_singleton_madam.py  test_streaming.py  test_vector.py  test_video.py  test_web_optimizations.py  test_xmp.py
tests/resources/: sine-440hz-audio-with-comments.opus  sine-440hz-audio.nut  sine-440hz-audio.opus  subtitle.srt  subtitle.vtt  test.dng
