[build-system]
requires = ["setuptools>=45", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "MADAM"
description = "Digital asset management library"
readme = {file = "README.rst", content-type = "text/x-rst"}
license = {file = "LICENSE.AGPL"}
authors = [
    {name = "Michael Seifert", email = "mseifert@error-reports.org"},
    {name = "Erich Seifert", email = "dev@erichseifert.de"},
]
urls = {Homepage = "https://github.com/eseifert/madam"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
    "Topic :: Multimedia :: Video :: Conversion",
]
keywords = ["asset", "media", "processing"]
dynamic = ["version"]
dependencies = [
    "bidict",
    "frozendict",
    "piexif",
    "pillow>=9.1.0",
]

[project.optional-dependencies]
dev = ["coverage", "mutagen", "pytest", "pytest-cov", "pytest-xdist", "ruff", "ty"]
doc = ["sphinx>=1.3", "sphinx_rtd_theme"]
heif = [
    "pillow-heif>=1.3.0",
]
pdf = [
    "pdf2image>=1.17.0",
    "pypdf>=6.7.4",
]
raw = [
    "rawpy>=0.26.1",
]
analysis = [
    "ssimulacra2>=0.3.0",
]
optimize = [
    "zopflipy>=1.1",
]
all = [
    "madam[heif,pdf,raw,analysis,optimize]",
]

[tool.setuptools_scm]
write_to = "madam/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-n auto"

[tool.coverage.run]
source = ["madam"]
parallel = true

[tool.coverage.report]
omit = ["*/_version.py"]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError()",
]

[tool.ruff]
line-length = 120
exclude = ["madam/_version.py"]

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ty]
