[metadata]
name = MADAM
description = Digital asset management library
long_description_content_type = text/x-rst
long_description = file: README.rst
url = https://github.com/eseifert/madam
author =
    Michael Seifert
    Erich Seifert
author_email =
    mseifert@error-reports.org
    dev@erichseifert.de
platforms = POSIX
license = AGPLv3
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Multimedia :: Graphics :: Graphics Conversion
    Topic :: Multimedia :: Sound/Audio :: Conversion
    Topic :: Multimedia :: Video :: Conversion
    License :: OSI Approved :: GNU Affero General Public License v3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
keywords = asset, media, processing
# This includes the license file(s) in the wheel.
# https://wheel.readthedocs.io/en/stable/user_guide.html#including-license-files-in-the-generated-wheel-file
license_files = LICENSE.AGPL

[options]
packages = madam
python_requires = >=3.7
install_requires =
    bidict
    frozendict
    piexif
    pillow >= 8.2.0
    zopflipy >= 1.1
tests_require =
    mutagen
    piexif
    pytest >= 3.0
zip_safe = True

[options.extras_require]
doc =
    importlib_metadata
    sphinx >= 1.3
    sphinx_rtd_theme
